--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ minecraft_version=1.20.3
 yarn_mappings=1.20.3+build.1
 loader_version=0.15.0
 # Mod Properties
-mod_version=0.12.5
-maven_group=io.wispforest
+mod_version=0.12.5-dev.1
+maven_group=com.redenmc
 archives_base_name=owo-lib
 # Dependencies
 fabric_version=0.91.1+1.20.3
